@@ -1,3 +1,10 @@
+2001-05-15  "Takayuki Nakagawa"  <tknakaga@kanagawa.hitachi.co.jp>
+
+	* w3m.el (w3m-goto-ftp-url): Use `file-directory-p' instead of
+	file name suffix to distinguish directories and files.
+	(w3m-time-parse-string (for buggy timezone.el)): Ignore errors
+	occured in `encode-time'.
+
 2001-05-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (emacs-w3m-version): Up to 1.0.
